--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Lines&display=swap');
 
 
+body{
+    font-family: "Roboto", sans-serif;
+   font-weight: 600;
+  font-style: normal;
+}
 .navBar {
     display: flex;
     align-items: center;
@@ -15,18 +21,90 @@
     border-radius: 16px;
     background-color: #f2f5f2;
 }
+/* hero section Styling */
+.chooseBrand{
+    width: 95%;
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    text-align: center;
+
+
+}
+.chooseBrand h2{
+    margin: 50px 0px;
+    font-size: 40px;
+    color: red;
+}
+.hero{
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
+    width: 100%;
+}
+.styles_singlePhone img{
+    height: 100%;
+    width: 80%;
+}
+.styles_singlePhone{
+    position: relative;
+    cursor: pointer;
+    width: 150px;
+    text-align: center;
+}
+.styles_singlePhone:hover h1{
+    color: red;
+}
+#rotate{
+    transition: transform 0.3s  , top 0.5s, scale 0.5s;;
+}
+.styles_singlePhone:hover #rotate{
+    transform: rotateZ(5deg) translateY(-20px) scale(1.01);
+    top: -50px;
+}
+
+.style_back{
+    position: absolute;
+    top: -30px;   
+    right: -25px;
+    z-index: -1 ;
+}
+.styles_singlePhone h1{
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+
+
+
+}
 #container{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 .card{
-    width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 200px;
     background-color: #fff;
+    display: flex;
+}
+.card h2{
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 21px;
+    margin: 0;
 }
 .card img{
     width: 100%;
     
+}
+.card p{
+    margin: 2px 0px;
+    padding: 0;
+    font-size: 18px;
+    font-weight: 400;
+
 }
 .card:hover{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
