--- a/style.css
+++ b/style.css
@@ -1,25 +1,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Lines&display=swap');
 
-
+@font-face {
+    font-family: "gibson";
+    src: url(./fonts/Gibson/Demo_Fonts/Fontspring-DEMO-gibson-regular.otf);
+}
 body{
-    font-family: "Roboto", sans-serif;
+    font-family: "gibson", sans-serif;
    font-weight: 600;
   font-style: normal;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+nav{
+    width: 100%;
+    background-color: #48AFFF;
 }
 .navBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #48AFFF;
+    height: 100px;
+    width: 95%;
+    margin: 0 auto;
+   
 }
 .navBar img{
     width: 100px;
 }
-.search select{
-    width: 300px;
-    height: 30px;
+.search input{
+    padding: 20px 0px;
+    width: 98%;
     border: none;
-    border-radius: 16px;
-    background-color: #f2f5f2;
+    border-radius: 8px;
+    font-size: 20px;
+    padding-left: 20px;
+}
+.search{
+    width: 45%;
+    position: relative;
+}
+.search span i{
+    position: absolute;
+    right: 17px;
+    top: 18px;
+    font-size: 30px;
+    color: #48AFFF;
+}
+.logo , .buttons{
+    width: 20%;
+}
+.buttons{
+    text-align: right;
+}
+.navBar button {
+    width: 150px;
+    height: 60px;
+    border-radius: 8px;
+    font-size: 20px;
+    font-weight: 700;
+    border: none;
+}
+.login{
+    color: #48AFFF;
+
+}
+.register{
+    background: transparent;
+    border: 1px solid #fff;
+    color: #fff;
 }
 /* hero section Styling */
 .chooseBrand{
@@ -82,15 +132,20 @@ body{
     display: flex;
     flex-wrap: wrap;
     margin-top: 40px;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+
 }
 .card{
-    width: 300px;
-    height: 200px;
+    width: 450px;
+    height: 300px;
     background-color: #fff;
     display: flex;
+    color: rgb(51, 51, 51);
 }
 .card h2{
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 600;
     line-height: 21px;
     margin: 0;
@@ -106,6 +161,63 @@ body{
     font-weight: 400;
 
 }
-.card:hover{
+.card-con:hover{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.model{
+    font-size: 25px !important;
+    margin-bottom: 5px !important;
+}
+.model:hover, .card h2:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.card span{
+    font-size: 20px;
+    font-weight: 600;
+}
+.price{
+    font-family: "Roboto";
+    font-size: 25px !important;
+    font-weight: 700 !important;
+    color: red;
+}
+.card-details{
+    padding: 10px 10px;
+}
+.card-con{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+.bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px solid #DBDBDB;
+    border-top: 1px solid #DBDBDB;
+    margin-top: 10px;
+}
+.bottom button{
+    width: 125px;
+    height: 35px;
+    border-radius: 30px;
+    font-weight: 800;
+    background-color: #fff;
+}
+.cartBtn{
+    background-color: red !important;
+    color: #fff;
+    border: none;
+}
+.color{
+    border-radius: 50%; 
+    display: inline-block; 
+    width: 20px; 
+    height: 20px;
+    margin-right: 5px;
+    border: 3px solid #DBDBDB;
 }
