--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     src: url(./fonts/Gibson/Demo_Fonts/Fontspring-DEMO-gibson-regular.otf);
 }
 body{
-    font-family: "gibson", sans-serif;
+    font-family: "Roboto", sans-serif;
    font-weight: 600;
   font-style: normal;
   margin: 0;
@@ -18,6 +18,7 @@ nav{
     position: fixed;
     z-index: 9999;
     top: 0;
+    font-family: "gibson", sans-serif ;
 }
 .navBar {
     display: flex;
@@ -53,6 +54,9 @@ nav{
 }
 .logo , .buttons{
     width: 20%;
+}
+.logoImg{
+    width: 250px !important;
 }
 .buttons{
     text-align: right;
@@ -94,7 +98,9 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: end;
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 80px;
 }
 .styles_singlePhone img{
     height: 100%;
@@ -142,7 +148,7 @@ nav{
 
 }
 .card{
-    width: 400px;
+    width: 450px;
     height: 250px;
     background-color: #fff;
     display: flex;
@@ -194,6 +200,7 @@ nav{
     display: flex;
     flex-direction: column;
     width: 500px;
+    margin-top: 25px;
 }
 .bottom{
     display: flex;
@@ -283,6 +290,20 @@ li img{
 }
 .screen{
     background-color: #F1F8FF;
+}
+
+footer{
+    background: #111;
+    padding:  20px 23px;
+    color: #fff;
+    margin-top: 80px;
+}
+footer span a{
+    color: crimson;
+    text-decoration: none;
+}
+footer span a:hover{
+    text-decoration: underline;
 }
 
 @media only screen and (max-width: 1280px){
